<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_back"
    android:orientation="vertical"
    tools:context=".SplashScreen">


    <ImageView
        android:id="@+id/title"
        android:layout_width="98dp"
        android:layout_height="25dp"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:src="@drawable/logo"
        />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="200dp"
        android:layout_height="210dp"
        android:layout_marginTop="53dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:src="@drawable/main"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fresh look, same login."
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="@color/splash_text_color"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        >

        <ImageView
            android:layout_width="23dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:src="@drawable/up_down" />
        <TextView
            android:layout_width="119dp"
            android:layout_height="48dp"
            android:layout_marginStart="162dp"
            android:text="@string/splash_text1"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/splash_text_color"
            android:textSize="12sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/enter" />
        <TextView
            android:layout_width="119dp"
            android:layout_height="48dp"
            android:layout_marginStart="162dp"
            android:text="@string/splash_text2"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/splash_text_color"
            android:textSize="12sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="23dp"
            android:src="@drawable/recycler"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="119dp"
            android:layout_height="48dp"
            android:layout_marginStart="162dp"
            android:text="@string/splash_text3"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/splash_text_color"
            android:textSize="12sp"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="49dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Why Smartr? Read here"
        android:textSize="10sp"
        android:textColor="@color/splash_text_color"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started"
        android:layout_width="274dp"
        android:layout_height="42dp"
        android:layout_marginTop="9dp"
        app:cornerRadius="30dp"
        android:text="get started"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textColor="@color/button_text_color"
        android:backgroundTint="@color/button_color"
        />


</LinearLayout>